--- a/content/index.html
+++ b/content/index.html
@@ -13,7 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js"></script>
     
-    <link rel="stylesheet" href="/css/enroll.css">
+    <link rel="stylesheet" href="./css/enroll.css">
     <script src="./js/firebase.js" type="module"></script>
 </head>
 <body class="bg-light">
@@ -79,8 +79,8 @@
         </div>
     </div>
 
- <script src="/js/interface_auth.js" defer></script>
- <script src="/js/enroll.js" type="module"></script>
+ <script src="./js/interface_auth.js" defer></script>
+ <script src="./js/enroll.js" type="module"></script>
   
   <!-- Bootstrap 5 JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
